# Amethyst-Server-Launcher

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: prerelease-build.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/download/: Cargo.toml
crates/download/src/: app.rs  error.rs  lib.rs  task.rs
crates/folder/: Cargo.toml
crates/folder/src/: lib.rs
crates/install/: Cargo.toml
crates/install/src/: lib.rs
crates/launch/: Cargo.toml
crates/launch/src/: app.rs  lib.rs
crates/market/: Cargo.toml
crates/market/src/: lib.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/src/tauri_app/: mod.rs
crates/runtime/src/tauri_app/commands/: downloads.rs  files.rs  instances.rs  mod.rs  process.rs  system.rs
scripts/: mvp-smoke.sh
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CrashAnalysisModal.tsx  DeleteInstancePromptModal.tsx  DownloadCenter.tsx  FirstRunGuideModal.tsx  InboxModal.tsx  InstanceConsole.tsx  InstanceCreationWizard.tsx  JavaRuntimePromptModal.tsx  LauncherTopBar.tsx  ServerCard.tsx  SystemResourcePanel.tsx  WindowControls.tsx  index.ts
src/components/instanceConsole/: ConsoleFilesTab.tsx  ConsoleLogsTab.tsx  ConsoleSettingsTab.tsx
src/components/styles/: downloadCenter.css  instanceConsole.css  launcherTopBar.css  modals.css  toast.css
src/features/: appSettings.ts  errorHandling.ts  instanceLabels.ts  instanceService.ts  javaRuntime.ts  launcherData.ts  serverCatalog.ts  systemResource.ts  updateCheck.ts
src/features/instances/: instanceDownloadWorkflow.ts  instanceErrorTemplate.ts  useDeleteFlow.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/install/: mod.rs
src/install/vanilla/: mod.rs
src/pages/: DownloadsPage.tsx  HomePage.tsx  InstancesPage.tsx  MarketPage.tsx  SettingsPage.tsx  index.ts
src/pages/styles/: downloadsPage.css  homePage.css  marketPage.css  settingsPage.css
src/store/: marketplaceStore.ts
src/theme/: animations.css  base.css  responsive.css  tokens.css
