[package]
name = "amethyst-server-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7"
anyhow = "1.0"
toml = "0.7.6"
tokio = { version = "1", features = ["full"] }
